Frontend - fix word wrapping issue in bc. blocks. Closes #83

--- a/frontend/app/assets/stylesheets/dradis/frontend/textile.css.scss
+++ b/frontend/app/assets/stylesheets/dradis/frontend/textile.css.scss
@@ -37,6 +37,7 @@
   -webkit-border-radius: 3px;
   border-radius: 3px;
   padding: 10px;
+  white-space: pre-wrap;
 }
 
 .preview {
